--- a/data_extension/requirements.txt
+++ b/data_extension/requirements.txt
@@ -1,8 +1,8 @@
-py2neo==4.3.0
-psycopg2==2.8.3
-SQLAlchemy==1.3.6
-networkx==2.3
-numpy==1.17.0
-pandas==0.25.0
-jupyter_client=5.3.1
-notebook==6.0.0
+py2neo>=4.3.0
+psycopg2>=2.8.3
+SQLAlchemy>=1.3.6
+networkx>=2.3
+numpy>=1.17.0
+pandas>=0.25.0
+jupyter_client>=5.3.1
+notebook>=6.0.0
