--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
+include juneau/config/config.yaml
 recursive-include jupyter-config *.json
-recursive-include juneau/dataset_inspector *.js
+recursive-include juneau/dataset_inspector *.js *.css
