--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       - POSTGRES_DB=postgres
     ports:
       - '5432:5432'
+    volumes:
+      - .:/home/
   neo4j:
     image: neo4j
     ports:
@@ -27,4 +29,6 @@ services:
     depends_on:
       - neo4j
       - postgres
+
+
 
