--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    image: postgres
+    image: zives/hab-postgres
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=habitat1
